<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OPR</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="opr">ONLINE PLOT RENTAL</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="or">or</string>
    <string name="name">Name</string>
    <string name="city">City/Location</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="confpasswd">Confirm Password</string>
    <string name="city_name">City</string>
    <string name="search">SEARCH</string>
    <string name="buy">BUY</string>
    <string name="cancel">CANCEL</string>
    <string name="type">Type of property</string>
    <string name="house">House</string>
    <string name="appartment">Apartment</string>
    <string name="villa">Villa</string>
    <string name="flat">Flat</string>
    <string name="price">Price Range</string>
    <string name="max">Maximum amount</string>
    <string name="bedroom">No of bedrooms</string>
    <string name="loc">Location</string>
    <string name="plot">Plot</string>
    <string name="sell">SELL</string>
    <string name="bathrooms">No of bathrooms</string>
    <string name="amont">Amount</string>
    <string name="area">Area</string>
    <string name="amneties">Amneties Included</string>
    <string name="ac">AC</string>
    <string name="coffee">Coffee</string>
    <string name="heating">Heating</string>
    <string name="parking">Parking</string>
    <string name="balcony">Balcony</string>
    <string name="pool">Pool</string>
    <string name="cable">Cable</string>
    <string name="fridge">Fridge</string>
    <string name="internet">Internet</string>
    <string name="address">Address</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="add">ADD</string>
    <string name="family_house">FAMILY HOUSE</string>
    <string name="familyhouse">Family house</string>
    <string name="bungalow">Bungalow</string>
    <string name="office_building">Office building</string>
    <string name="prop_price">Price</string>
    <string name="prop_name">"Property name "</string>
    <string name="owner">Owner</string>
    <string name="contract_type">Contract type</string>
    <string name="booking">BOOK</string>
    <string name="prop_id">Property id</string>
    <string name="videos">View Videos</string>
    <string name="mapView">View map</string>
    <string name="booked_list">Booked List</string>
    <string name="itemtype">Type</string>
    <string name="land">Select Type of Land</string>
    <string name="type_contract">Cntract Type</string>
    <string name="plotType">Plot Type</string>
    <string name="plotId">Plot ID</string>
    <string name="plottitle">Plot Title</string>
    <string name="description">Description</string>

</resources>
