<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="342dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:paddingTop="10dp" >

                <EditText
                    android:id="@+id/cityeditText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/city_name"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" >

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/amounteditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/loc"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" />

                <EditText
                    android:id="@+id/editText7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/address"
                    android:inputType="textPostalAddress" />

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/type" />

                <HorizontalScrollView
                    android:id="@+id/horizontalScrollView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp" >

                        <RadioButton
                            android:id="@+id/houseRdioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/house" />

                        <RadioButton
                            android:id="@+id/radioButton3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/flat" />

                        <RadioButton
                            android:id="@+id/radioButton1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/appartment" />

                        <RadioButton
                            android:id="@+id/radioButton4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/villa" />

                        <RadioButton
                            android:id="@+id/radioButton5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/plot" />
                    </LinearLayout>
                </HorizontalScrollView>

                <EditText
                    android:id="@+id/EditText01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/area"
                    android:inputType="number"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" />

                <EditText
                    android:id="@+id/bedroomeditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/bedroom"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/bathrooms"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/editText5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/amont"
                    android:inputType="number"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" />

                <EditText
                    android:id="@+id/editText6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/area"
                    android:inputType="number"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" />

                <TextView
                    android:id="@+id/bedroomstextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="10dp"
                    android:text="@string/amneties" />

                <HorizontalScrollView
                    android:id="@+id/horizontalScrollView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="635dp"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" >

                        <CheckBox
                            android:id="@+id/housecheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ac" />

                        <CheckBox
                            android:id="@+id/appartmentcheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/coffee" />

                        <CheckBox
                            android:id="@+id/villacheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/heating" />

                        <CheckBox
                            android:id="@+id/bungalowcheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/parking" />

                        <CheckBox
                            android:id="@+id/checkBox5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/balcony" />

                        <CheckBox
                            android:id="@+id/checkBox6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pool" />

                        <CheckBox
                            android:id="@+id/checkBox7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cable" />

                        <CheckBox
                            android:id="@+id/checkBox8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fridge" />

                        <CheckBox
                            android:id="@+id/checkBox9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/internet" />

                        <CheckBox
                            android:id="@+id/checkBox10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="CheckBox" />
                    </LinearLayout>
                </HorizontalScrollView>

            </LinearLayout>
        </ScrollView>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/Black"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/searchButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:text="@string/sell" />
    </FrameLayout>

</RelativeLayout>