<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="396dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <AutoCompleteTextView
                    android:id="@+id/cityeditText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/city_name"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" >

                    <requestFocus />
                </AutoCompleteTextView>

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="10dp"
                    android:text="@string/type" />

                <HorizontalScrollView
                    android:id="@+id/horizontalScrollView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp" >
                        
						

                        <CheckBox
                            android:id="@+id/housecheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/familyhouse" />

                        <CheckBox
                            android:id="@+id/appartmentcheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/appartment" />

                        <CheckBox
                            android:id="@+id/villacheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/villa" />

                        <CheckBox
                            android:id="@+id/bungalowcheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bungalow" />

                        <CheckBox
                            android:id="@+id/officecheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/office_building" />
                       
                    </LinearLayout>
                </HorizontalScrollView>

                <EditText
                    android:id="@+id/maxamounteditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/max"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/bedroomseditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/bedroom"
                    android:inputType="number" />
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/Black"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/searchButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:text="@string/search" />
    </FrameLayout>

</RelativeLayout>