<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightGrey"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/loginButton"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/loginButton"
        android:layout_marginBottom="19dp"
        android:background="@drawable/button"
        android:text="@string/register" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/registerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:paddingTop="5dp"
        android:text="@string/or"
        android:textColor="@color/Black" />

    <EditText
        android:id="@+id/usernameeditText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:background="@drawable/textbox"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/username"
        android:paddingLeft="5dp"
        android:drawableLeft="@drawable/user_male" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/titleTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button"
        android:text="@string/login" />

    <EditText
        android:id="@+id/passwdeditText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="47dp"
        android:background="@drawable/textbox"
        android:drawableLeft="@drawable/pass"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="5dp" />

</RelativeLayout>